monitoring/manifests/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
  
spec:
  selector: 
    app: prometheus
  type: NodePort  
  ports:
    - port: 9090
      targetPort: 9090 
      nodePort: 30000
