monitoring/manifests/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.192.168.59.100.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: grafana
            port: 
              number: 3000
