monitoring/manifests/prometheus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prometheus.192.168.59.100.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: prometheus
            port: 
              number: 9090
